--- a/css/projetos.css
+++ b/css/projetos.css
@@ -20,12 +20,10 @@
     padding-bottom: 5%;
 }
 
-#projeto1, #projeto2 {
+#projeto1, #projeto2, #projeto3 {
 margin-top: -2%;
 background-color: black;
-display: flex;
-justify-content: center;
-align-items: center;
+
 min-height: 500px;
 max-width: 400px;
 margin-left: auto;
@@ -34,44 +32,88 @@ padding-top: 2%;
 
 
 
- 
+ }
+
+ #projeto1 {
+
+    display: flex;
+    justify-content: end;
+    margin-left: 2%;
     
+ }
 
-}
+ #projetos .projetos .card-body p{
+
+    font-size: 15px;
+ }
+
+ #projetos .projetos .card-body {
+    padding-bottom:0;
+ }
 
 
 
+ 
 
 
 #projeto1 .card,
-#projeto2 .card {
+#projeto2 .card,
+#projeto3 .card{
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 2%;
 
-    width: 350px;
+    width: 300px;
     padding-bottom: 5%;
     margin-top: 0%;
     margin-top: -5%;
     background-color: black;
     border: 1px solid blue;
-    height: 480px;
+    height: 430px;
     border-radius: 3%;
     
 }
 
-#projeto1 .card h1,
-#projeto2 .card h1 {
 
-    font-size: 30px;
+
+#projeto1 .card h1,
+#projeto2 .card h1,
+#projeto3 .card h1 {
+
+    font-size: 20px;
     color: white;
+}
+
+.projetos {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
 
-#projeto1 .card img, 
+
+
+
+
+#projeto1 .card img {
+
+    margin-top: 2%;
+    width: 90%;
+    border-radius: 0;
+}
 #projeto2 .card img {
+    
+
+    border-radius: 0;
+    margin-top: 2%;
+    width: 90%;
+}
+
+#projeto3 .card img {
     
 
     border-radius: 0;
@@ -92,6 +134,7 @@ padding-top: 2%;
 }
 
 #projeto1 .card .buttons {
+    
 
     width: 100%;
     display: flex;
@@ -138,16 +181,35 @@ padding-top: 2%;
     border-bottom-right-radius: 13px;
 }
 
+#projeto3 .card  .card-body .languages {
 
-
-
-
-#projeto3 .card {
-    
-    border: 2px solid blue;
-    border-radius: 5%;
-    
+    word-spacing: 20px;
 }
+
+
+
+#projeto3 .card .buttons {
+    
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#projeto3 .card .buttons button {
+
+    width: 120px;
+    height: 35px;
+    border: 2px solid white;
+    background-color: black;
+    border-top-left-radius: 13px;
+    border-bottom-left-radius: 13px;
+    border-top-right-radius: 13px;
+    border-bottom-right-radius: 13px;
+}
+
 
 #projeto1 .card .buttons button a {
 
@@ -162,5 +224,18 @@ padding-top: 2%;
     text-decoration: none;
     color: white;
 
+}
+
+#projeto3 .card .buttons button a {
+
+    text-decoration: none;
+    color: white;
+
+}
+
+#projeto2 {
+
+    display: flex;
+    justify-content: center;
 }
 
