--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,21 +1,9 @@
-.navbar {
 
-    background-color: black;
-}
 
-.navbar .navbar-brand {
 
-    margin-left: 5%;
-    color: white
-}
 
-.menu {
 
-    margin-right: 10%;
-
-}
-
-.menu .navbar-nav .nav-item{
+ .navbar-nav .nav-item{
 
     margin-right: 20px;
 }
@@ -23,12 +11,38 @@
 
 
 
-.navbar .collapse .navbar-nav .nav-item .nav-link {
+.navbar .collapse{
+
+    
+    width: 500px;
 
 
 
-    color: white
+    
+
 } 
 
-.nav-item
+.navbar .navbar-nav {
+width: 350px;
+    
+
+}
+
+
+.navbar .navbar-nav #link-about {
+
+    
+    width: 100px;
+}
+
+.navbar .navbar-nav .nav-item a:hover{ 
+
+    text-decoration: none;
+    text-transform: none;
+    color: white;
+
+
+}
+
+
 
